--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>favlinkz</title>
-    <meta name="google-signin-client_id" content="YOUR_CLIENT_ID" />
-    <meta name="google-signin-cookiepolicy" content="single_host_origin" />
-    <meta name="google-signin-scope" content="profile email" />
+    <title>Favlinkz</title>
   </head>
   <body></body>
 </html>
